--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap"
       rel="stylesheet"
     />
-    <title>Template vite+bootstrap</title>
+    <title>Campo Minato</title>
   </head>
   <body>
     <div id="app"></div>
